fix logo color on dark mode

--- a/components/Layout/index.module.css
+++ b/components/Layout/index.module.css
@@ -195,8 +195,10 @@
     max-width: 100vw;
   }
   .copyCentered {
+    align-items: center;
     max-width: 100vw;
   }
+
   .subTitle {
     padding: 0 10px;
   }
